log/build_2022-09-11_16-49-59/decoding_element/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/decoding_element/lib/python3.10/site-packages/decoding_element/data_integrator.py", line 71
    """
       ^
SyntaxError: f-string: empty expression not allowed

